--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -1,16 +1,12 @@
 ---
 import { getCollection } from 'astro:content';
 import MainGridLayout from "@layouts/MainGridLayout.astro";
-import ImageWrapper from "../../components/misc/ImageWrapper.astro";
 import {Icon} from "astro-icon/components";
 import PostMetadata from "../../components/PostMeta.astro";
 import {i18n} from "@i18n/translation";
 import I18nKey from "@i18n/i18nKey";
-import {getDir, getPostUrlBySlug} from "@utils/url-utils";
-import License from "@components/misc/License.astro";
-import {licenseConfig} from "src/config";
+import {getPostUrlBySlug} from "@utils/url-utils";
 import Markdown from "@components/misc/Markdown.astro";
-import path from "path";
 
 export async function getStaticPaths() {
     const blogEntries = await getCollection('posts', ({ data }) => {
