Fixed some type script issues, changed profile avatar

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,20 +1,24 @@
 ---
-import { Icon } from 'astro-icon/components';
-import DisplaySettings from "./widget/DisplaySettings.svelte";
-import {LinkPreset, NavBarLink} from "../types/config";
-import {navBarConfig, siteConfig} from "../config";
-import NavMenuPanel from "./widget/NavMenuPanel.astro";
-import Search from "./Search.svelte";
-import {LinkPresets} from "../constants/link-presets";
-const className = Astro.props.class;
+import { Icon } from 'astro-icon/components'
+import { navBarConfig, siteConfig } from '../config'
+import { LinkPresets } from '../constants/link-presets'
+import type { LinkPreset, NavBarLink } from '../types/config'
+import Search from './Search.svelte'
+import DisplaySettings from './widget/DisplaySettings.svelte'
+import NavMenuPanel from './widget/NavMenuPanel.astro'
 
-let links: NavBarLink[] = navBarConfig.links.map((item: NavBarLink | LinkPreset): NavBarLink => {
-    if (typeof item === "number") {
-        return LinkPresets[item]
+const className = Astro.props.class
+
+const links: NavBarLink[] = navBarConfig.links.map(
+  (item: NavBarLink | LinkPreset): NavBarLink => {
+    if (typeof item === 'number') {
+      return LinkPresets[item]
     }
-    return item;
-});
+    return item
+  },
+)
 
+console.log('siteConfig', siteConfig)
 ---
 <div class:list={[
     className,
