--- a/src/components/widget/NavMenuPanel.astro
+++ b/src/components/widget/NavMenuPanel.astro
@@ -1,13 +1,13 @@
 ---
-import {NavBarLink} from "../../types/config";
-import {siteConfig} from "../../config";
-import {Icon} from "astro-icon/components";
+import { Icon } from 'astro-icon/components'
+import { siteConfig } from '../../config'
+import type { NavBarLink } from '../../types/config'
 
 interface Props {
-    links: NavBarLink[],
+  links: NavBarLink[]
 }
 
-const links = Astro.props.links;
+const links = Astro.props.links
 ---
 <div id="nav-menu-panel" class:list={["float-panel closed absolute transition-all fixed right-4 px-2 py-2"]}>
     {links.map((link) => (
