Removed sidebar and some nav elements

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -43,12 +43,12 @@ console.log('siteConfig', siteConfig)
     </div>
     <div class="flex">
         <!--<SearchPanel client:load>-->
-        <Search client:load>
+        <!-- <Search client:load>
             <Icon slot="search-icon" name="material-symbols:search" size={"1.25rem"} class="absolute pointer-events-none ml-3 transition my-auto text-black/30 dark:text-white/30"></Icon>
-            <!--<Icon slot="arrow-icon" name="material-symbols:chevron-right-rounded" size={"1.25rem"} class="transition my-auto text-[var(&#45;&#45;primary)]"></Icon>-->
+            <Icon slot="arrow-icon" name="material-symbols:chevron-right-rounded" size={"1.25rem"} class="transition my-auto text-[var(&#45;&#45;primary)]"></Icon>
             <Icon slot="arrow-icon" name="fa6-solid:chevron-right" size={"0.75rem"} class="transition translate-x-0.5 my-auto text-[var(--primary)]"></Icon>
             <Icon slot="search-switch" name="material-symbols:search" size={"1.25rem"}></Icon>
-        </Search>
+        </Search> -->
         <button aria-label="Display Settings" class="btn-plain h-11 w-11 rounded-lg active:scale-90" id="display-settings-switch">
             <Icon name="material-symbols:palette-outline" size={"1.25rem"}></Icon>
         </button>
