--- a/src/components/widget/SideBar.astro
+++ b/src/components/widget/SideBar.astro
@@ -6,9 +6,9 @@ import Tag from './Tags.astro'
 const className = Astro.props.class
 ---
 <div id="sidebar" class:list={[className, "w-full"]}>
-    <div class="flex flex-col w-full gap-4 mb-4">
+   <!--  <div class="flex flex-col w-full gap-4 mb-4">
         <Profile/>
-    </div>
+    </div> -->
     <div class="flex flex-col w-full gap-4 top-4 sticky top-4">
         <Categories class="onload-animation" style="animation-delay: 150ms"></Categories>
         <Tag class="onload-animation" style="animation-delay: 200ms"></Tag>
