--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -191,11 +191,11 @@ function setClickOutsideToClose(panel: string, ignores: string[]) {
 		let tDom = event.target;
 		for (let ig of ignores) {
 			let ie = document.getElementById(ig)
-			if (ie == tDom || (ie?.contains(tDom))) {
+			if (ie === tDom || (ie?.contains(tDom))) {
 				return;
 			}
 		}
-		panelDom.classList.add("closed");
+		panelDom?.classList.add("closed");
 	});
 }
 setClickOutsideToClose("display-setting", ["display-setting", "display-settings-switch"])
