--- a/src/components/misc/Markdown.astro
+++ b/src/components/misc/Markdown.astro
@@ -1,11 +1,11 @@
 ---
-import '@fontsource-variable/jetbrains-mono';
-import '@fontsource-variable/jetbrains-mono/wght-italic.css';
+import '@fontsource-variable/jetbrains-mono'
+import '@fontsource-variable/jetbrains-mono/wght-italic.css'
 
 interface Props {
-    class: string;
+  class: string
 }
-const className = Astro.props.class;
+const className = Astro.props.class
 ---
 <div data-pagefind-body class=`prose dark:prose-invert prose-base max-w-none custom-md ${className}`>
     <!--<div class="prose dark:prose-invert max-w-none custom-md">-->
@@ -127,6 +127,11 @@ const className = Astro.props.class;
           content: none
     img
       border-radius: 0.75rem
+      max-height: 45rem
+      width: auto
+      height: auto
+      margin-left: auto
+      margin-right: auto
     hr
       border-color: var(--line-divider)
       border-style: dashed
