--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,10 @@
 ---
 
-import {profileConfig} from "../config";
-
+import { profileConfig } from '../config'
 ---
 
 <div class="card-base max-w-[var(--page-width)] min-h-[4.5rem] rounded-b-none mx-auto flex items-center px-6">
     <div class="transition text-50 text-sm">
-        © 2023 {profileConfig.name}. All Rights Reserved.
-        <br>
-        Powered by <a class="link text-[var(--primary)] font-medium" target="_blank" href="https://github.com/saicaca/fuwari">Fuwari</a>
+        Made with ♥ and <a class="link text-[var(--primary)] font-medium" target="_blank" href="https://astro.build/">Astro</a> by Steffi Große-Bölting 2024.
+        I used and adjusted the <a class="link text-[var(--primary)] font-medium" target="_blank" href="https://github.com/saicaca/fuwari">Fuwari</a> template.
     </div>
-</div>
